file(GLOB ROOT "*.h" "*.cpp")
file(GLOB MATH "Math/*.h" "Math/*.cpp")
file(GLOB GEOMETRY "Math/Geometry/*.h" "Math/Geometry/*.cpp")
file(GLOB SYSTEM "System/*.h" "System/*.cpp")
file(GLOB SCENE "Scene/*.h" "Scene/*.cpp")
file(GLOB COMPONENT "Scene/Component/*.h" "Scene/Component/*.cpp")
file(GLOB GRAPHICS "Graphics/*.h" "Graphics/*.cpp")
file(GLOB UTILS "Utils/*.h" "Utils/*.cpp")
file(GLOB PLATFORM "System/*.h" "System/*.cpp")

find_package(SDL2 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
find_package(spdlog CONFIG REQUIRED)
add_library(Pe2 STATIC ${ROOT} ${MATH} ${GEOMETRY} ${SYSTEM} ${SCENE} ${VULKAN} ${OPENGL} ${GRAPHICS} ${UTILS} ${PLATFORM})
target_link_libraries(Pe2 PRIVATE SDL2::SDL2 SDL2::SDL2main spdlog::spdlog spdlog::spdlog_header_only glad::glad)